# Full-Stack-Chat-Application

chat-app/: README.md  package-lock.json  package.json
chat-app/src/: App.js
chat-app/src/pages/: Home.js
chat-app/src/pages/Home/: AddUser.js  Chats.js  Search.js  Users.js
chat-app/src/pages/LoginComponents/: SignIn.js  SignUp.js  authentication.module.css
chat-app/src/pages/css/: Add.module.css  Home.module.css  Search.module.css  Users.module.css
chat-application-b/: Cargo.toml
chat-application-b/src/: .env  chat_handlers.rs  chat_services.rs  main.rs  user_handlers.rs  user_models.rs  user_services.rs
