[package]
name = "chat-application-b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.190", features = ["derive"] }
actix-cors = "0.6.4"
tokio = {version = "1.33.0", features = ["full"]}
sqlx = {version = "0.7.2", features = ["postgres","runtime-tokio-rustls", "macros"]}
serde_json = "1.0.108"
mongodb = "2.7.1"
actix-web-actors = { version = "4.2.0" }
actix = "0.13.1"
futures-util = "0.3.29"